[package]
name = "janus-plugin"
version = "0.11.1"
edition = "2018"
authors = ["Marshall Polaris <marshall@pol.rs>"]
description = "Library for creating plugins for Janus, the WebRTC gateway."
repository = "https://github.com/mozilla/janus-plugin-rs"
readme = "README.md"
license = "MPL-2.0"

[workspace]
members = ["janus-plugin-sys", "jansson-sys"]

[dependencies]
bitflags = "1.2"
chrono = "0.4"
colored = "1.9"
glib-sys = "0.9"
libc = "0.2"
serde = "1.0"
jansson-sys = { path = "jansson-sys", version = "0.1.0" }
janus-plugin-sys = { path = "janus-plugin-sys", version = "0.6.0" }
