[package]
name = "janus-plugin-sys"
version = "0.6.0"
authors = ["Marshall Quander <marshall@quander.me>"]
description = "Native bindings to the Janus plugin API."
repository = "https://github.com/mozilla/janus-plugin-rs"
license = "MPL-2.0"

[dependencies]
glib-sys = "0.4"
jansson-sys = { path = "../jansson-sys", version = "0.1.0" }
