[package]
name = "janus-plugin-sys"
version = "0.7.0"
edition = "2018"
authors = ["Marshall Polaris <marshall@pol.rs>"]
description = "Native bindings to the Janus plugin API."
repository = "https://github.com/mozilla/janus-plugin-rs"
license = "MPL-2.0"

[dependencies]
glib-sys = "0.10"
jansson-sys = { path = "../jansson-sys", version = "0.1.0" }
